Solving some layout issues on the aside when encrypted text exists

--- a/assets/css/aside.css
+++ b/assets/css/aside.css
@@ -21,10 +21,12 @@
     height: 100%;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
 }
 
 .encryptetText {
     font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .aside__encrypted .button {
